--- a/src/main/resources/templates/homeview.html
+++ b/src/main/resources/templates/homeview.html
@@ -13,17 +13,19 @@
 <body>
 <div class="container">
     <h1>Hallo Welt</h1>
-    <div class="row">
-        <form class="col-12" th:object="${daten}" action="post" th:action="@{/sendFormData}">
+
+    <div class="row" th:if="${daten}">
+        <form class="col-12" enctype="multipart/form-data"
+              th:object="${daten}" method="post" th:action="@{/sendFormData}">
 
             <div>
-                <input type="text" th:field="*{item1}"/>
+                <input type="text" th:field="*{subject}"/>
             </div>
             <div>
-                <input type="text" th:field="*{item2}"/>
+                <input type="text" th:field="*{amount}"/>
             </div>
             <div>
-                <input type="text" th:field="*{item3}"/>
+                <input type="text" th:field="*{type}"/>
             </div>
             <div>
             <input class="btn btn-primary" type="submit"/>
@@ -33,8 +35,32 @@
 </div>
 
 
+
+<div th:if="${result}">
+    <label th:value="${result}" th:text="${result}"></label>
+</div>
+<div th:if="${databases}">
+    <p th:each="String : ${databases}">
+        <a th:value="${String}" th:text="${String}"></a>
+    </p>
+
+    <a type="button" class="btn btn-info" th:href="@{/disconnect}">Disconnect</a>
+</div>
+<div th:if="not ${databases}">
+    <a type="button" class="btn btn-info" th:href="@{/connect}">Connect</a>
+</div>
 <div>
-    <a type="button" class="btn btn-info" th:href="@{/connect}">loololol</a>
+    <a class="btn btn-primary" th:href="@{/listTransactions}" type="button">load transactions</a>
+</div>
+<div th:if="${transactions}">
+    <table class="table table-striped">
+        <thead>
+        <title>name</title>
+        </thead>
+        <tbody th:each="Document : ${transactions}">
+    <tr th:text="${Document.type}"></tr>
+        </tbody>
+    </table>
 </div>
 
 
